# sirius

./: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  config.h  config.status  configure  configure.in  conftest  libtool  mkinstalldirs  pixmap-path  sirius.desktop  sirius.desktop.in
data/: Makefile  Makefile.am  Makefile.in  corner  edge  opening_book
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: Makefile  Makefile.in  Makefile.in.in.rej  POTFILES  POTFILES.in  de.gmo  de.po  fr.gmo  fr.po  ru.gmo  ru.po  sv.gmo  sv.po
src/: #sirius.c#  Makefile  Makefile.am  Makefile.in  board.c  board.h  book.c  book.h  evaluation.c  evaluation.h  gmon.out  gnome-canvas-pimage.c  hashtable.c  hashtable.h  search.c  search.h  sirius.c  sirius.h  siriusid.h  stat  testboard.h  timer.c  timer.h
